# Haskell-ID3-Random-Forest

./: Bootstrap.hs  CrossValidation.hs  DecisionTree.hs  ID3.hs  LICENSE  README  TestMain.hs  main.hs  random-forest.cabal  stack.yaml
data/: LICENSE  soybean-small.data
