name:          random-forest
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Kevin Tindall
maintainer:    kevinkjt2000@gmail.com
copyright:     (c) 2018 Kevin Tindall
build-type:    Simple
cabal-version: >=1.10

executable random_forest
  main-is:          main.hs
  build-depends:    base >=4.7,
                    containers >=0.5.5.1,
                    HTF >=0.12.2.3,
                    pretty-tree >=0.1.0.0,
                    random >=1.0.1.1,
                    random-shuffle >=0.0.4,
                    split >=0.2.2
  default-language: Haskell2010

test-suite random_forest_tests
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  build-depends:    base >=4.7,
                    containers >=0.5.5.1,
                    HTF >=0.12.2.3,
                    pretty-tree >=0.1.0.0,
                    random >=1.0.1.1,
                    random-shuffle >=0.0.4,
                    split >=0.2.2
  default-language: Haskell2010
